# AdventureWorksRagAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: schema_adventureworks.yaml
data/: schema_data.py
scripts/: ingest.py  run_eval.py
src/: config.py  database.py  executor.py  explanation.py  generation.py  intent.py  llm_client.py  logger.py  main.py  pipeline.py  retrieval.py  sanitizer.py  templates.py  vector_store.py
tests/: eval_suite.json
