[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adventureworks-rag"
version = "1.0.0"
description = "Production-grade Text-to-SQL RAG agent for AdventureWorks2022"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pyodbc>=5.0.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["src*", "data*", "scripts*", "tests*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
